--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS homework 01</title>
   </head>
-  <body></body>
+  <body>
+    <script type="module" src="./js/task-1.js"></script>
+  </body>
 </html>
